# DeepSeekQT

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  README_zh.md  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
